--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,10 @@
-
 {
   "version": 2,
   "buildCommand": "npm run build",
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "regions": ["iad1"],
+  "regions": ["auto"],
   "headers": [
     {
       "source": "/api/(.*)",
