--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "undici": "^7.7.0",
     "vaul": "^0.9.3",
     "zod": "^3.23.8"
   },
